dist subtree commit

--- a/index.html
+++ b/index.html
@@ -9,72 +9,79 @@
   </head>
   <body>
     <img src="/robo-bg.svg" class="robot-union" alt="robo" />
-    <nav class="main-navigation">
-      <img src="/logo.svg" alt="logo" />
-      <div class="main-navigation-content">
-        <ul>
-          <li class="menu-item" data-link="about">About System</li>
-          <li class="menu-item" data-link="metrics">Results</li>
-          <li class="menu-item" data-link="faq">Q&A</li>
-          <li class="menu-item">
-            <a href="mailto:alis.r2010@yandex.ru">Leave a request</a>
-          </li>
-          <li class="menu-item" data-link="media">Media</li>
-        </ul>
 
-        <div id="burger" class="burger">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-
-        <div id="mobile-navigation" class="mobile-navigation">
-          <div id="close" class="close">
-            <span></span>
-            <span></span>
-          </div>
-
+    <div class="top-block">
+      <nav class="main-navigation">
+        <img src="/logo.svg" alt="logo" />
+        <div class="main-navigation-content">
           <ul>
             <li class="menu-item" data-link="about">About System</li>
             <li class="menu-item" data-link="metrics">Results</li>
             <li class="menu-item" data-link="faq">Q&A</li>
-            <li class="menu-item">
-              <a href="mailto:alis.r2010@yandex.ru">Leave a request</a>
-            </li>
             <li class="menu-item" data-link="media">Media</li>
+            <li class="menu-item">
+              <a class="leave-request" href="mailto:alis.r2010@yandex.ru"
+                >Leave a request</a
+              >
+            </li>
           </ul>
+
+          <div id="burger" class="burger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+
+          <div id="mobile-navigation" class="mobile-navigation">
+            <div id="close" class="close">
+              <span></span>
+              <span></span>
+            </div>
+
+            <ul>
+              <li class="menu-item" data-link="about">About System</li>
+              <li class="menu-item" data-link="metrics">Results</li>
+              <li class="menu-item" data-link="faq">Q&A</li>
+              <li class="menu-item" data-link="media">Media</li>
+              <li class="menu-item">
+                <a class="leave-request" href="mailto:alis.r2010@yandex.ru"
+                  >Leave a request</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
 
-    <div class="header">
-      <div class="decoration decoration-header-1"></div>
-      <div class="decoration decoration-header-2"></div>
+      <div class="header">
+        <div class="decoration decoration-header-1"></div>
+        <div class="decoration decoration-header-2"></div>
 
-      <div class="header-content">
-        <h1>
-          Technologies
-          <br />
-          that can improve
-          <br />
-          the lives of
-          <br />
-          IT managers
-        </h1>
-
-        <div class="header-desc">
-          <h3>
-            Unlock the Power of Effective
+        <div class="header-content">
+          <h1>
+            Technologies
             <br />
-            Leadership with PM Brain!
-          </h3>
+            that can improve
+            <br />
+            the lives of
+            <br />
+            IT managers
+          </h1>
 
-          <p>
-            Welcome to PM Brain, the groundbreaking system designed to
-            supercharge leadership within large companies. We're not here to
-            replace managers; we're here to amplify their potential and help
-            them make top-tier management decisions.
-          </p>
+          <div class="header-desc">
+            <h3>
+              Unlock the Power of Effective
+              <br />
+              Leadership with PM Brain!
+            </h3>
+
+            <p>
+              Welcome to PM Brain, the groundbreaking system designed to
+              supercharge leadership within large companies. We're not here to
+              replace managers; we're here to amplify their potential and help
+              them make top-tier management decisions.
+            </p>
+          </div>
         </div>
       </div>
     </div>
