remove extra quotes

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
     <div class="block-4 content block">
       <div class="block-text">
-        <h3>"Empower Your Leadership with the Performance Dashboard!</h3>
+        <h3>Empower Your Leadership with the Performance Dashboard!</h3>
         <p>
           Welcome to the Performance Dashboard section of PM-Brain, your window
           into data-driven leadership. This section offers a visual
@@ -197,7 +197,7 @@
           statuses, workload distribution, and individual contributions. Gain a
           comprehensive understanding of your team's progress, enabling you to
           make informed decisions and drive productivity. Elevate your
-          management skills with the Performance Dashboard section of PM-Brain!"
+          management skills with the Performance Dashboard section of PM-Brain!
         </p>
       </div>
 
@@ -232,7 +232,7 @@
           team's dynamics and receive tailored recommendations. Track progress
           over time and aim for the 'X' in your test results to achieve balance
           and success. Elevate your leadership with the X-Test section of
-          PM-Brain!"
+          PM-Brain!
         </p>
       </div>
     </div>
